--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -36,7 +36,7 @@
 	.delivery_page .left_block span.db{font-size: 14px;line-height: 25px;}
 	.delivery_page .right_block{float: none;margin-right: 0px;margin-top: 31px;}
 	.delivery_page .right_block span.db{font-size: 14px;}
-	.delivery_page .ah3 {font-size: 27px;}
+	.delivery_page .ah3, .bottom_city .ah3 {font-size: 27px;}
 	.delivery_page .manager_block{margin-top: 66px;}
 	.delivery_page .manager_block .fleft.w50 {float: none;width: auto;margin-top: 43px;}
 	.delivery_page .manager_block .fright.w50 {float: none;width: auto;}
@@ -50,12 +50,12 @@
 	.delivery_page .manager_block .fleft.w50.bot{margin-top: 36px;}
 	.delivery_page .manager_block .fleft.w50.bot p{font-size: 14px;margin-bottom: 10px;}
 	.delivery_page .manager_block .fleft.w50.bot p a{width: 125px;margin-left: 2px;text-align: center;padding-left: 0px;}
-	.delivery_page .bottom_block{margin-top: 63px;margin-bottom: 128px;}
-	.delivery_page .bottom_block .ah3{margin-bottom: 54px;}
-	.delivery_page .bottom_block .block .row{padding: 50px 0px;}
-	.delivery_page .bottom_block .block .row .item:nth-child(2){padding-left: 10px;}
-	.delivery_page .bottom_block .block .row .item:nth-child(3){padding-left: 23px;}
-	.delivery_page .bottom_block .block .row .item:nth-child(4){padding-left: 35px;}
+	.bottom_city{margin-top: 63px;margin-bottom: 128px;}
+	.bottom_city .ah3{margin-bottom: 54px;}
+	.bottom_city .block .row{padding: 50px 0px;}
+	.bottom_city .block .row .item:nth-child(2){padding-left: 10px;}
+	.bottom_city .block .row .item:nth-child(3){padding-left: 23px;}
+	.bottom_city .block .row .item:nth-child(4){padding-left: 35px;}
 	.gallery_page .pagetitle {font-size: 32px;}
 	.gallery_page .pag_block{margin-top: 54px;}
 	.gallery_page .pag_block a {font-size: 14px;padding: 0px 11px;margin-right: 7px;margin-bottom: 7px;}
@@ -119,13 +119,14 @@
 }
 
 @media screen and (min-width: 1000px){
+	.get-banner .right_block .call_block .call_me:hover{border-color: transparent;}
 	.gallery_page a:hover .svg .cls-1{fill: #2f52e0;}
 	.contacts_page .top_row .item .prog_block ul li a:hover:before{display: none;}
 	.contacts_page .top_row .item .prog_block ul li:nth-child(1) a:hover {color: #7a529d;}
 	.contacts_page .top_row .item .prog_block ul li:nth-child(2) a:hover {color: #25d366;}
 	.contacts_page .top_row .item a.mail:hover {color: #1b3ab9;}
 	.contacts_page .top_row .item a.mail:hover:after{color: #1b3ab9;}
-	.delivery_page .bottom_block .block .row .item a:hover {color: #2f52e0;}
+	.bottom_city .block .row .item a:hover {color: #2f52e0;}
 	.gallery_page .pag_block a:hover {background-color: #ABD809;}
 	.gallery_page .row .item .block:hover div.hide {display: block;}
 	.gallery_page .row .item .block:hover .img_block:before{display: block;}
@@ -176,6 +177,31 @@
 }
 
 @media screen and (max-width: 999px){
+	.price_block.price_block_type_page .pagetitle{max-width: 205px; margin-left: auto; margin-right: auto;}
+	.item__page.type_page{padding-bottom: 130px;}
+	.get-banner .right_block .call_block .phone:before{left: -28px;}
+	.get-banner .right_block .call_block{padding-top: 21px; margin-left: 28px;}
+	.get-banner .left_block .pagetitle{margin-bottom: 8px;}
+	.get-banner{display: block; padding: 35px 77px 25px;}
+	.width-gray-block .after-block .mark{margin-bottom: 0;}
+	.width-gray-block .after-block .left_block p{margin-bottom: 11px;}
+	.width-gray-block .block{margin-bottom: 35px;}
+	.width-gray-block .after-block{margin-bottom: 71px;}
+	.width-gray-block .after-block .left_block{float: none; width: auto; margin-right: 0; font-size: 15px; margin-bottom: 15px;}
+	.width-gray-block .block > div{padding-bottom: 16px;}
+	.width-gray-block .block .flex_wrap .item{width: 50%;}
+	.width-gray-block .block .flex_wrap .item:nth-child(2){-webkit-box-ordinal-group: 3; -webkit-order: 3; -ms-flex-order: 3; order: 3;}
+	.width-gray-block .block .flex_wrap .item:nth-child(3){-webkit-box-ordinal-group: 2; -webkit-order: 2; -ms-flex-order: 2; order: 2;}
+	.width-gray-block .block .flex_wrap .item:nth-child(4){-webkit-box-ordinal-group: 4; -webkit-order: 4; -ms-flex-order: 4; order: 4;}
+	.width-gray-block .block li{margin-bottom: 16px;}
+	.width-gray-block .block .ah3{font-size: 14px; line-height: 24px; margin-bottom: 41px;}
+	.width-gray-block .pagetitle{max-width: 520px; margin-left: auto; margin-right: auto; margin-bottom: 55px;}
+	.stat_block.stat_block_magnifier-hover{padding-top: 20px;}
+	.stat_block.stat_block_magnifier-hover .pagetitle{max-width: 525px; margin-left: auto; margin-right: auto;}
+	.price_block_type_page .item_type_page2{padding-bottom: 60px;}
+	.price_block .dd .item p{margin-bottom: 38px;}
+	.price_block .dd .item .ah3{font-size: 17px; line-height: 20px;}
+	.item__page .banner_block ul{padding-top: 30px; margin-bottom: -3px;}
 	.delivery_page .manager_block .fright.w50 ul li{font-size: 14px; line-height: 21px;}
 	.delivery_page .manager_block .fright.w50 span.db{margin-top: 24px;}
 	.contacts_page .top_row .item p{font-size: 14px;}
@@ -277,6 +303,7 @@
 	.price_block .pagetitle{margin-bottom: 55px;}
 	.price_block{padding-top: 78px;}
 	.item__page .banner_block p{max-width: 530px;}
+	.item__page .banner_block ul{display: none;}
 	.item__page .banner_block .pagetitle{font-size: 32px; line-height: 35px; margin-bottom: 37px;}
 	.item__page .banner_block{padding-top: 69px; padding-bottom: 70px;}
 	.item__page{margin-top: -70px;}
@@ -512,6 +539,50 @@
 }
 
 @media screen and (max-width: 650px){
+	.item__page.type_page{padding-bottom: 80px;}
+	.get-banner .right_block .call_block .call_me{margin-top: 5px;}
+	.get-banner .left_block .pagetitle{margin-bottom: 18px;}
+	.get-banner .left_block{padding-right: 0; line-height: 22px; margin-bottom: 16px;}
+	.get-banner{padding: 36px 25px 38px 22px;}
+	.width-gray-block{margin-bottom: 58px;}
+	.width-gray-block .after-block{margin-bottom: 0;}
+	.width-gray-block .after-block .left_block{margin-bottom: 8px;}
+	.width-gray-block .after-block .mark{max-width: 235px; line-height: 22px;}
+	.width-gray-block .block{margin-bottom: 25px;}
+	.width-gray-block .block .more_button{padding-top: 7px; color: #afd91a; text-decoration: underline; font-size: 15px;}
+	.width-gray-block .block li{padding-right: 0;}
+	.width-gray-block .block .flex_wrap .item:first-child, .width-gray-block .block .flex_wrap .item:nth-child(2){display: block;}
+	.width-gray-block .block .flex_wrap .item{display: none; width: auto; padding-right: 0;}
+	.width-gray-block .block .flex_wrap{display: block; margin-right: 0;}
+	.width-gray-block .block .ah3{padding-right: 13px; margin-bottom: 33px;}
+	.width-gray-block .block > div{padding: 28px 23px 45px;}
+	.width-gray-block .pagetitle{margin-bottom: 36px;}
+	.price_block.price_block_type_page .dd .item .table1 i.mark, .price_block.price_block_type_page .dd .item .table2 .mark{margin-top: 25px; max-width: none;}
+	.price_block .dd .item .ah3{line-height: 24px; margin-bottom: 21px;}
+	.bottom_city .block .row .item a:before{top: 7px;}
+	.bottom_city .block .row .item:nth-child(3){padding-left: 0;}
+	.bottom_city .block .row .item:nth-child(2), .bottom_city .block .row .item:nth-child(4){padding-left: 25px;}
+	.bottom_city .block .row .item a{font-size: 13px; line-height: 16px; margin-bottom: 14px; padding-left: 12px;}
+	.bottom_city .block .row{padding: 37px 0 22px 0;}
+	.bottom_city .ah3{max-width: 260px; margin-left: auto; margin-right: auto; margin-bottom: 35px;}
+	.bottom_city{margin-top: 49px;  margin-bottom: 80px;}
+	.bottom_city .block .row .item{width: 50%;}
+	.delivery_page .manager_block .fright.w50.bot{margin-top: 15px; line-height: 21px;}
+	.delivery_page .manager_block .fleft.w50 p{margin-bottom: 25px;}
+	.delivery_page .manager_block .fleft.w50{margin-top: 29px;}
+	.delivery_page .ah3, .bottom_city .ah3{font-size: 22px; line-height: 25px;}
+	.delivery_page .manager_block{margin-top: 53px;}
+	.delivery_page .left_block{max-width: 170px;}
+	.delivery_page .left_block span.db{font-size: 14px; line-height: 18px;}
+	.delivery_page .left_block p{ color: #000; margin-bottom: 10px;}
+	.delivery_page .slider_block > .rL.hid span.inb{margin-bottom: 8px;}
+	.delivery_page .slider_block .polzunok-container-3{margin-bottom: 45px;}
+	.delivery_page .slider_block span.fleft{float: none; margin-bottom: 43px;}
+	.delivery_page .slider_block{padding: 28px 22px 30px;}
+	.delivery_page .ah2{font-size: 16px; margin-bottom: 29px;}
+	.delivery_page .slider_block input.box{margin-left: 0;}
+	.delivery_page .manager_block .fright.w50{margin-top: 0;}
+	.delivery_page .pagetitle{font-size: 24px; margin-bottom: 41px;}
 	.discounts_page .main_block .banner2 .yellow_block:before{width: 200px;}
 	.discounts_page .main_block .grey_block p b{display: inline;}
 	.discounts_page .bot_block.fleft{margin-top: 33px; margin-bottom: 80px;}
@@ -587,7 +658,7 @@
 	.price_block .dd .item .on_mobile .hide.active{display: block;}
 	.price_block .dd .item .on_mobile .ah2.active:after{ -moz-transform: rotate(0); -ms-transform: rotate(0); -webkit-transform: rotate(0); -o-transform: rotate(0); transform: rotate(0);}
 	.price_block .dd .item .on_mobile .ah2.active{border-bottom: 0;}
-	.price_block .dd .item .on_mobile{border:1px solid #dddede; margin-bottom: 24px; border-bottom: 0;}
+	.price_block .dd .item span.on_mobile{border:1px solid #dddede; margin-bottom: 24px; border-bottom: 0;}
 	.price_block .dd .item .on_mobile .hide .double{line-height: 43px; padding: 0 18px; border-bottom: 1px solid #dddede;}
 	.price_block .dd .item .on_mobile .hide .ah3{background: #f0f3f3; padding: 13px 18px; border-bottom: 1px solid #dddede;}
 	.price_block .dd .item .on_mobile .hide{display: none; border-top:3px solid #abd809; border-bottom:3px solid #abd809;}
@@ -751,7 +822,6 @@
 	.about_block .left_block {position: relative; overflow: hidden; padding-bottom: 12px;}
 	.about_block .pagetitle{margin-bottom: 26px;}
 	.about_block{padding-top: 62px; padding-bottom: 21px;}
-	.delivery_page .manager_block .fright.w50{margin-top: -12px;}
 	.gallery_page .next_f{margin-top: 19px;}
 	.gallery_page .row .item{margin-bottom: 21px;}
 	.gallery_page .pag_block{margin-top: 44px;}
