--- a/css/global.css
+++ b/css/global.css
@@ -14,6 +14,11 @@ a{text-decoration:none; color:inherit; transition: .3s color;}
 button{display:block; cursor:pointer; box-sizing:border-box; padding:0;}
 button, .button{ text-decoration:none !important;}
 /* .button:hover{transition: opacity .3s, visibility 0s linear .3s; opacity:0.8;} */
+.flex_wrap{display: -webkit-box;    display: -ms-flexbox;    display: flex; -ms-flex-wrap: wrap;    flex-wrap: wrap;}
+.flex_just{-webkit-box-pack: justify;    -ms-flex-pack: justify;    justify-content: space-between;}
+.flex_no_wrap{-ms-flex-wrap: nowrap;    flex-wrap: nowrap;}
+.flex_shrink{-webkit-flex-shrink: 0;    -ms-flex-negative: 0; flex-shrink: 0;}
+.flex_grow{flex-grow: 0;    -webkit-box-flex: 0;    -webkit-flex-grow: 0;    -ms-flex-positive: 0;}
 .nowrap{white-space:nowrap;}
 .inner{max-width:1280px; width: 100%; margin:0 auto; padding-left: 20px; padding-right: 20px; box-sizing: border-box;}
 .clear{clear:both; height:1px;}
@@ -54,6 +59,7 @@ button, .button{ text-decoration:none !important;}
 .rL{position:relative;}
 .fixed{position:fixed;}
 .abs{position:absolute;}
+.no_wrap{white-space: nowrap;}
 .hid{overflow:hidden;}
 .m0{margin:0;}
 .m0I{margin:0 !important;}
